# printo

./: .ruff.toml  README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: lint.yml  tests_and_coverage.yml  tests_and_coverage_old.yml
printo/: __init__.py  descript.py  filters.py  reprs.py
tests/: test_descript.py  test_filters.py
tests/documentation/: test_readme.py
tests/units/: test_descript.py  test_reprs.py
