[build-system]
requires = ['setuptools==68.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'printo'
version = '0.0.8'
authors = [
  { name='Evgeniy Blinov', email='zheni-b@yandex.ru' },
]
description = 'Print objects with data beautifully'
readme = 'README.md'
requires-python = '>=3.8'
classifiers = [
    'Operating System :: OS Independent',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries',
    'Typing :: Typed',
]
keywords = [
    'print',
    'repr',
    'serialization',
]

[tool.setuptools.package-data]
"printo" = ["py.typed"]

[tool.mutmut]
paths_to_mutate="printo"
runner="pytest"

[project.urls]
'Source' = 'https://github.com/pomponchik/printo'
'Tracker' = 'https://github.com/pomponchik/printo/issues'
