[build-system]
requires = ['setuptools==68.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'printo'
version = '0.0.12'
authors = [
  { name='Evgeniy Blinov', email='zheni-b@yandex.ru' },
]
description = 'Print objects with data beautifully'
readme = 'README.md'
requires-python = '>=3.8'
dependencies = [
    'sigmatch>=0.0.7'
]
classifiers = [
    'Operating System :: OS Independent',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: Free Threading',
    'Programming Language :: Python :: Free Threading :: 3 - Stable',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries',
    'Typing :: Typed',
]
keywords = [
    'print',
    'repr',
    'serialization',
]

[tool.setuptools.package-data]
"printo" = ["py.typed"]

[tool.mutmut]
paths_to_mutate="printo"
runner="pytest"

[tool.ruff]
lint.ignore = ['E501', 'E712', 'E731', 'PTH123', 'PTH118', 'PLR2004', 'PTH107', 'SIM105', 'SIM102', 'RET503', 'PLR0912', 'C901']
lint.select = ["ERA001", "YTT", "ASYNC", "BLE", "B", "A", "COM", "INP", "PIE", "T20", "PT", "RSE", "RET", "SIM", "SLOT", "TID252", "ARG", "PTH", "I", "C90", "N", "E", "W", "D201", "D202", "D419", "F", "PL", "PLE", "PLR", "PLW", "RUF", "TRY201", "TRY400", "TRY401"]
format.quote-style = "single"

[project.urls]
'Source' = 'https://github.com/mutating/printo'
'Tracker' = 'https://github.com/mutating/printo/issues'
